fixed the z-index

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 5px;
+  z-index: 10;
 }
 .social-icons > * {
   margin-bottom: 1em;
